test/frontend/fail/unknown_identifiers.osl
void foo(T t) {}
shader bar() {
    int j = i;
}
